continue Responsive SubNavBar

--- a/src/Style/NavBar.scss
+++ b/src/Style/NavBar.scss
@@ -34,7 +34,7 @@
       
     .btn-search {
         &::after {
-          content: " BUSCAR";
+          content: 'BUSCAR';
         }
       }
     .icon {
