--- a/src/Style/SubNavBar.scss
+++ b/src/Style/SubNavBar.scss
@@ -1,5 +1,6 @@
 .container {
     width: 100%;
+    height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
