--- a/src/Style/Footer.scss
+++ b/src/Style/Footer.scss
@@ -1,4 +1,4 @@
-.links {
+.links , .bottom {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,6 +6,23 @@
 .social{
     width: 192px;
     height: 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.dowl {
+    width: 272px;
+    height: 35px;
+    
+}
+.gda-fiscal {
+    width: 288px;
+    height: 44px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.gda {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
