change img autor default and div img

--- a/src/Style/Article.scss
+++ b/src/Style/Article.scss
@@ -3,9 +3,13 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    border: 1px solid black;
 }
-.imgautor {
-    width: 80px;
+.img-autor {
+    
+  
+    
+   
 }
 .title {
     text-decoration: none;
