scss card full screen

--- a/src/Style/Card.scss
+++ b/src/Style/Card.scss
@@ -1,3 +1,11 @@
-.card {
-    background-color: gray;
+.card-bottom {
+    
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 62.76%);
+}
+.img-card{
+    height: 457px;
+    img{
+
+        width: 100%
+    }
 }
