--- a/src/Style/NavBar.scss
+++ b/src/Style/NavBar.scss
@@ -1,12 +1,15 @@
 .navbar {
   width: 100%;
-  height: 40px;
+  min-width: 300px;
+  padding: 12px;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
+  
 
   // tablet and mobile devices
   @media (max-width: 1024px){
+    width: 100%;
     .btn-section {
         display: none;
     }
@@ -26,7 +29,8 @@
   }
   // Desktop devices
   @media (min-width : 1024px){
-      height: 72px;
+    width: 100%;
+    
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -65,14 +69,12 @@
   justify-content: center;
   margin-right: 10px;
 }
-.logo {
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.img-logo {
+    margin: 0px;
+    width: 150px;
 }
 .icon {
-    height: 20px;
+    height: 18px;
 }
 .btn-search {
   height: 40px;
@@ -81,6 +83,9 @@
   height: 40px;
 }
 .btn-suscribe {
-    margin-right: 18px;
+    font-size: .75rem;
+    font-weight: 700;
+    padding: 3px 16px;
     text-decoration: none;
+    color: #0074c4;
 }
