--- a/src/Style/Article.scss
+++ b/src/Style/Article.scss
@@ -1,5 +1,7 @@
 .article {
     width: inherit;
+    padding: 10px;
+    height: inherit;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
