--- a/src/Style/SubNavBar.scss
+++ b/src/Style/SubNavBar.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     
     // mobile devices
-    @media (max-width: 319px) {
+    @media (max-width: 321px) {
         .weather , .newsl , .clubn , .a-dolar {
             display: none;
         }
@@ -27,5 +27,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-size: 0.875rem;
 }
 
