style Navbar finish

--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -1,4 +1,5 @@
 .App{
+  
     position: absolute;
     width: 100%;
     height: auto;
@@ -6,5 +7,5 @@
 }
 nav{
     height: 40px;
-    
+    padding: 12px 0px;
 }
