--- a/src/Style/SubNavBar.scss
+++ b/src/Style/SubNavBar.scss
@@ -1,4 +1,5 @@
 .container {
+    padding: 0px 16px;
     width: 100%;
     height: 40px;
     display: flex;
@@ -6,7 +7,7 @@
     justify-content: space-between;
     
     // mobile devices
-    @media (max-width: 321px) {
+    @media (max-width: 768px){
         .weather , .newsl , .clubn , .a-dolar {
             display: none;
         }
@@ -14,7 +15,7 @@
     }
 
     // tablet devices
-    @media (max-width: 1023px) and (min-width: 320px){
+    @media (max-width: 1024px){
         .weather , .newsl {
             display: none;
         }
