continu style mobile first

--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -1,11 +1,31 @@
-.App{
-  
-    position: absolute;
-    width: 100%;
-    height: auto;
-    font-family: Arial, sans-serif;
+.App {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  font-family: Arial, sans-serif;
 }
-nav{
-    height: 40px;
-    padding: 12px 0px;
+.navbar {
+  position: relative;
+  border-bottom: 1px solid #cccccc;
+  padding: 12px 0px;
+  width: 100%;
+}
+.lay {
+  width: 100%;
+  font: inherit;
+  min-width: 320px;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  @media (max-width: 1023px) {
+      width: 100%;
+  }
+  @media (min-width: 1024px) {
+    width: 100%;
+}
 }
