--- a/src/Style/SubNavBar.scss
+++ b/src/Style/SubNavBar.scss
@@ -1,56 +1,54 @@
 .sub-navbar {
-    width: inherit;
+  width: 100%;
   min-width: 320px;
-  padding: 0px 16px;
- 
-   
+  padding: 8px 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.container {
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.lay {
+  padding: 0px 16px;
 
-    //mobile devices
-    @media (max-width: 320px){
-        .a-dolar {
-            display: none;
-        }
-      
+  //mobile devices
+  @media (max-width: 320px) {
+    font: inherit;
+    .a-dolar {
+      display: none;
     }
-    
-    // tablet devices
-    @media (max-width: 767px){
-        .weather , .newsl , .clubn  {
-            display: none;
-        }
-      
-    }
+  }
 
-    // desktop devices
-    @media (max-width: 1024px){
-        
-        .weather , .newsl {
-            display: none;
-        }
-        
+  // tablet devices
+  @media (max-width: 767px) {
+    .weather,
+    .newsl,
+    .clubn {
+      display: none;
     }
-    @media (min-width: 1023px) {
-        width: inherit;
+  }
+
+  // desktop devices
+  @media (max-width: 1023px) {
+    .weather,
+    .newsl {
+      display: none;
+    }
+  }
+  @media (min-width: 1023px) {
+    width: inherit;
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 0px 40px;
-       
-    }
-
+  }
 }
 
-.dolar , .clubn , .weather, .newsl {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    font-size: 0.875rem;
+.dolar,
+.clubn,
+.weather,
+.newsl {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 0.875rem;
 }
-
