--- a/src/Style/NavBar.scss
+++ b/src/Style/NavBar.scss
@@ -1,74 +1,12 @@
-.lay {
- 
-
-  // tablet and mobile devices
-  @media (max-width: 1023px) {
-   
-
-    .btn-section {
-      display: none;
-    }
-    .btn-signin {
-      display: none;
-    }
-    .btns-left {
-      display: none;
-    }
-    .btns-right {
-      width: 100px;
-      margin-right: 20px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: center;
-    }
-  }
-  // Desktop devices
-  @media (min-width: 1024px) {
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0px 40px;
-
-    .icon {
-      display: none;
-    }
-    .img-logo {
-      width: 300px;
-    }
-    .btns-right {
-      height: 40px;
-      display: inline-flex;
-      
-    }
-
-  
-    .btn-suscribe {
-      margin-right: 25px;
-      width: 105px;
-      height: 40px;
-      border: 1px solid #cccccc;
-      box-sizing: border-box;
-      border-radius: 4px;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      background-color: #FFFF24;
-      color: #000000;
-    }
-  }
-}
 .btns-left {
-  width: 260px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 .btns-right {
-  width: 113px;
   height: 24px;
-  
+  flex-direction: row;
+  justify-content: space-between;
 }
 .img-logo {
   width: 164px;
@@ -78,41 +16,12 @@
   height: 24px;
 }
 
-.btn-section,
-.btn-search {
-  padding: 12px 16px;
-  height: 40px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 0.75rem;
-  font-weight: 700;
-  background: #f2f2f2;
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
-  border-color: #f2f2f2;
-  img {
-    padding-left: 9px;
-    width: 15px;
+.btns-left , .btn-signin {
+  display: none;
+}
+@media (min-width:1024px) {
+  .navbar .btns-left{
+
+    display: inline-block; 
   }
-}
-.btn-suscribe {
-  font-size: 0.75rem;
-  font-weight: 700;
-  padding: 3px 16px;
-  text-decoration: none;
-  color: #0074c4;
-}
-.btn-signin {
-  height: 40px;
-  width: 96px;
-  padding: 3px 16px;
-  background: #f2f2f2;
-  background: #fff;
-  border-color: #0074c4;
-  color: #0074c4;
-  font-size: 0.75rem;
-  font-weight: 700;
-  border: 1px solid #0074c4;
-  border-radius: 0.25rem;
 }
