--- a/src/Style/NavBar.scss
+++ b/src/Style/NavBar.scss
@@ -1,10 +1,11 @@
 .btns-left {
+  width: 259px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 .btns-right {
-  height: 24px;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -19,9 +20,80 @@
 .btns-left , .btn-signin {
   display: none;
 }
+
+.btn-section,
+.btn-search {
+  padding: 12px 16px;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 0.75rem;
+  font-weight: 700;
+  background: #f2f2f2;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  border-color: #f2f2f2;
+  img {
+    padding-left: 9px;
+    width: 15px;
+  }
+}
+.btn-suscribe {
+  font-size: 0.75rem;
+  font-weight: 700;
+  padding: 3px 16px;
+  text-decoration: none;
+  color: #0074c4;
+}
+.btn-signin {
+  height: 40px;
+  width: 96px;
+  padding: 3px 16px;
+  background: #f2f2f2;
+  background: #fff;
+  border-color: #0074c4;
+  color: #0074c4;
+  font-size: 0.75rem;
+  font-weight: 700;
+  border: 1px solid #0074c4;
+  border-radius: 0.25rem;
+}
+
 @media (min-width:1024px) {
+  .btn-suscribe {
+    margin-right: 25px;
+    width: 105px;
+    height: 40px;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #FFFF24;
+    color: #000000;
+  }
   .navbar .btns-left{
 
-    display: inline-block; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+  }
+  .btn-signin {
+    display: inline-block;
+  }
+  .icon {
+    display: none;
+  }
+  .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    img {
+
+      width: 300px;
+      height: 30px;
+    }
   }
 }
