--- a/src/Style/DolarLabel.scss
+++ b/src/Style/DolarLabel.scss
@@ -29,5 +29,8 @@
 
 .a-dolar{
     text-decoration: none;
-    padding-right: 10px
+    padding-right: 10px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #0074C4;
 }
