--- a/src/Style/Footer.scss
+++ b/src/Style/Footer.scss
@@ -1,18 +1,39 @@
 .links , .bottom {
+    .logo{
+       width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+       
+        padding: 30px 0px;
+        border-bottom: 1px solid #cccccc;
+    }
+    padding: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .social{
+    padding: 30px 0px 50px;
     width: 192px;
     height: 24px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 .dowl {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 32px;
     width: 272px;
     height: 35px;
+    a > img {
+      
+     
+border-radius: 3px;
+    }
     
 }
 .gda-fiscal {
@@ -21,9 +42,20 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 .gda {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+.copyright {
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+}
+.footer {
+    padding: 32px 0px 16px;
 }
