--- a/src/Style/NavBar.scss
+++ b/src/Style/NavBar.scss
@@ -62,7 +62,11 @@
   border: 1px solid #0074c4;
   border-radius: 0.25rem;
 }
-
+@media (max-width: 1023px){
+  .btn-suscribe{
+    padding: 3px 16px 3px 0px;
+  }
+}
 @media (min-width:1024px) {
   .btn-suscribe {
     margin-right: 25px;
@@ -89,7 +93,7 @@
   .icon {
     display: none;
   }
-  .logo {
+  .row .logo {
     display: flex;
     flex-direction: row;
     justify-content: center;
