--- a/src/Style/Chapita.scss
+++ b/src/Style/Chapita.scss
@@ -1,6 +1,13 @@
 .chapita{
-    width: 68px;
-    height: 16px;
+    padding: 4px 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    font-size: 11px;
+    width: 84px;
+    height: 24px;
     background-color: black;
     color: white;
 }
