--- a/src/Style/Body.scss
+++ b/src/Style/Body.scss
@@ -1,5 +1,9 @@
 .body{
-    width: 100%;
+    
+    font: inherit;
+max-width: 920px;
+    padding: 16px 0px;
+     border: 1px solid black;
 }
 .sect-render{
    
@@ -7,5 +11,6 @@
     @media (min-width: 768px){
         display: flex;
         flex-direction: row;
+        
     }
 }
