--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -15,7 +15,7 @@
   font: inherit;
   min-width: 288px;
   padding: 0px 16px;
-
+ 
 }
 
 .row {
@@ -24,4 +24,11 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+}
+
+.wrap-body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
