--- a/src/Style/SubNavBar.scss
+++ b/src/Style/SubNavBar.scss
@@ -5,8 +5,16 @@
       align-items: center;
   }
 
+  @media (min-width: 1259px) {
+    .lay{
+      display: flex;
+      justify-content: center;
+    }
+    
+  }
   @media (min-width: 1024px){
     background-color: #F2F2F2;
+   
     
 
   }
