--- a/src/Style/Cabezal.scss
+++ b/src/Style/Cabezal.scss
@@ -3,7 +3,9 @@
     height: 100px;
     border: 1px solid #cccccc;
     margin: 65px 0px 64px;
-
+    background: repeating-linear-gradient(
+        45deg
+        ,hsla(0,0%,100%,.1),hsla(0,0%,100%,.1),hsla(0,0%,100%,.1),hsla(0,0%,100%,.1) 4px,rgba(0,0,0,.15) 6px);
 }
 
 .cabezal {
