--- a/src/Style/Megalateral.scss
+++ b/src/Style/Megalateral.scss
@@ -3,10 +3,14 @@
     height: 600px;
     border: 1px solid #cccccc;
     margin: 65px 0px 64px;
+    background: repeating-linear-gradient(
+45deg
+,hsla(0,0%,100%,.1),hsla(0,0%,100%,.1),hsla(0,0%,100%,.1),hsla(0,0%,100%,.1) 4px,rgba(0,0,0,.15) 6px);
 }
 .m-lateral {
     width: 300px;
     height: 4000px;
+    
     padding-left: 40px;
     @media (max-width: 1259px) {
         display: none;
