--- a/src/Style/Card.scss
+++ b/src/Style/Card.scss
@@ -1,21 +1,67 @@
-.card-bottom {
-    padding: 20px 16px 16px ;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 62.76%);
-}
-.img-card{
-    height: 457px;
-    width: 100%;
-    
-}
 .card{
     display: flex;
     flex-direction: column;
     justify-content:flex-end;
     height: 457px;
     width: 100%;
+   
+    color: white;
+   
       
         background-image: url('../assets/defaultImg.svg');
     background-size: cover;
     background-repeat: no-repeat;
+    @media (min-width:768px) {
+        height: 768px;
+        .card-bottom {
+            h1 {
+   
+                font-size: 48px;
+            }
+            height: 256px;
+           
+        }
+       
+    }
+    @media (min-width:1259px) {
+.card-bottom{
+    height: 200px;
+    
+}
+        height: 820px;
+        .wrap {
+            width: 1260px;
+
+        }
+        
+    }
    
 }
+.card-bottom {
+    padding: 16px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 62.76%);
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 216px;
+}
+
+.wrap{
+    max-width: 1260px;
+
+    h1 {
+        font-family: SuecaSlab;
+        font-size: 24px;
+        font-weight: 700;
+        margin: 0px;
+        padding: 12px 0px 8px;
+      
+      }
+      span {
+          font-family: Arial,sans-serif;
+          font-size: 14px;
+          font-weight: 700;
+      }
+
+}
+
