--- a/src/Style/Article.scss
+++ b/src/Style/Article.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    padding: 16px 8px;
    
 }
 .marq , .nameautor {
