--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -1,4 +1,11 @@
 $SuecaSlab-font-path: "../fonts/SuecaSlab";
+@font-face {
+  src: url("#{$SuecaSlab-font-path}/sueca-slab-bold-web.woff.ttf")
+    format("woff2");
+
+  font-family: "SuecaSlab";
+}
+
 .App {
   position: absolute;
   width: 100%;
@@ -6,59 +13,42 @@ $SuecaSlab-font-path: "../fonts/SuecaSlab";
   min-width: 320px;
 }
 
-@font-face {
-  
-    src: url("#{$SuecaSlab-font-path}/sueca-slab-bold-web.woff.ttf") format("woff2");
-
-    font-family: "SuecaSlab";
-   
-}
 .navbar {
   position: relative;
   border-bottom: 1px solid #cccccc;
   padding: 12px 0px;
-  @media (min-width: 1259px){
-    .lay{
+  @media (min-width: 1259px) {
+    .lay {
       display: flex;
       justify-content: center;
     }
-    
-
   }
 }
 
 .lay {
- 
   font: inherit;
- 
   padding: 0px 16px;
- 
 }
 
 .row {
- @media (min-width:1259px) {
-   width: 1260px;
- }
+  @media (min-width: 1259px) {
+    width: 1260px;
+  }
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
 
-.wrap-body {
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.sidebar{
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+.sidebar,
 .main {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.wrap-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
