--- a/src/Style/Article.scss
+++ b/src/Style/Article.scss
@@ -1,39 +1,38 @@
 .article {
-    width: inherit;
-    height: inherit;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 16px 8px;
-   
+  width: inherit;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 16px 8px;
 }
-.marq , .nameautor {
-    color: red;
-    text-align: start;
+
+.marq,
+.nameautor {
+  color: red;
+  text-align: start;
 }
-.img-autor{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 80px;
-    height: 80px;
-    img {
-       
-        width: 70px;
-        height: 70px;
-    }
+
+.img-autor {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  img {
+    width: 70px;
+    height: 70px;
+  }
 }
 
 .title {
-    text-align: start;
-    text-decoration: none;
+  text-align: start;
+  text-decoration: none;
 }
+
 .art-img {
-    width: 100%;
-    img{
-        width: inherit;
-        
-       
-    }
-    
+  width: 100%;
+  img {
+    width: inherit;
+  }
 }
