--- a/src/Style/Cabezal.scss
+++ b/src/Style/Cabezal.scss
@@ -1,35 +1,35 @@
-.container {
-    display: none;
-    width: 728px;
-    height: 90px;
-    border: 1px solid #cccccc;
-    margin: 65px 0px 64px;
-    background: repeating-linear-gradient(
-        45deg
-        ,hsla(0,0%,100%,.1),hsla(0,0%,100%,.1),hsla(0,0%,100%,.1),hsla(0,0%,100%,.1) 4px,rgba(0,0,0,.15) 6px);
-        
-    
+.cabezal {
+  display: none;
+  @media (min-width: 768px) {
+    width: 100%;
+    display: inline-block;
+    .container {
+      margin: 64px 20px 65px;
+      width: inherit;
+      display: block;
+    }
+  }
+  @media (min-width: 1100px) {
+    .container {
+      margin: 64px 20px 65px;
+      width: 920px;
+      height: 100px;
+    }
+  }
 }
 
-.cabezal {
-    display: none;
-    @media (  min-width:768px) {
-        width: 100%;
-        display: inline-block;
-        .container {
-
-            margin: 64px 20px 65px;
-            width: inherit;
-            display: block;
-        }
-    }
-    @media (min-width:1100px) {
-        .container{
-
-            margin: 64px 20px 65px;
-            width: 920px;
-            height: 100px;
-        }
-    }
- 
+.container {
+  display: none;
+  width: 728px;
+  height: 90px;
+  border: 1px solid #cccccc;
+  margin: 65px 0px 64px;
+  background: repeating-linear-gradient(
+    45deg,
+    hsla(0, 0%, 100%, 0.1),
+    hsla(0, 0%, 100%, 0.1),
+    hsla(0, 0%, 100%, 0.1),
+    hsla(0, 0%, 100%, 0.1) 4px,
+    rgba(0, 0, 0, 0.15) 6px
+  );
 }
