--- a/src/Style/DolarLabel.scss
+++ b/src/Style/DolarLabel.scss
@@ -1,36 +1,34 @@
-
-.dolar{
-    height: 40px;
-    min-width: 335px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.dolar {
+  height: 40px;
+  min-width: 335px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .dolar-bna {
-    font-size: 0.875rem;
-    padding-right: 10px;
-    font-weight: 700;
-    &::before {
-        content: 'BNA:';
-        font-weight: 400;
-    }
-    
+  font-size: 0.875rem;
+  padding-right: 10px;
+  font-weight: 700;
+  &::before {
+    content: "BNA:";
+    font-weight: 400;
+  }
 }
 .dolar-blue {
-    font-size: 0.875rem;
-    padding-right: 10px;
-    font-weight: 700;
-    &::before {
-        content: 'Blue:';
-        font-weight: 400;
-    }
+  font-size: 0.875rem;
+  padding-right: 10px;
+  font-weight: 700;
+  &::before {
+    content: "Blue:";
+    font-weight: 400;
+  }
 }
 
-.a-dolar{
-    text-decoration: none;
-    padding-right: 10px;
-    font-size: 14px;
-    font-weight: 700;
-    color: #0074C4;
+.a-dolar {
+  text-decoration: none;
+  padding-right: 10px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #0074c4;
 }
