--- a/src/Style/NavBar.scss
+++ b/src/Style/NavBar.scss
@@ -1,23 +1,73 @@
+@media (max-width: 1023px) {
+  .btn-suscribe {
+    padding: 3px 16px 3px 0px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .btn-suscribe {
+    margin-right: 25px;
+    width: 105px;
+    height: 40px;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #ffff24;
+    color: #000000;
+  }
+
+  .navbar .btns-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .btn-signin {
+    display: inline-block;
+  }
+
+  .icon {
+    display: none;
+  }
+
+  .row .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    img {
+      width: 300px;
+      height: 30px;
+    }
+  }
+}
+
 .btns-left {
   width: 259px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .btns-right {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .img-logo {
   width: 164px;
   height: 16px;
 }
+
 .icon {
   height: 24px;
 }
 
-.btns-left , .btn-signin {
+.btns-left,
+.btn-signin {
   display: none;
 }
 
@@ -39,6 +89,7 @@
     width: 15px;
   }
 }
+
 .btn-suscribe {
   display: flex;
   flex-direction: row;
@@ -49,6 +100,7 @@
   text-decoration: none;
   color: #0074c4;
 }
+
 .btn-signin {
   height: 40px;
   width: 96px;
@@ -61,46 +113,4 @@
   font-weight: 700;
   border: 1px solid #0074c4;
   border-radius: 0.25rem;
-}
-@media (max-width: 1023px){
-  .btn-suscribe{
-    padding: 3px 16px 3px 0px;
-  }
-}
-@media (min-width:1024px) {
-  .btn-suscribe {
-    margin-right: 25px;
-    width: 105px;
-    height: 40px;
-    border: 1px solid #cccccc;
-    box-sizing: border-box;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #FFFF24;
-    color: #000000;
-  }
-  .navbar .btns-left{
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between; 
-  }
-  .btn-signin {
-    display: inline-block;
-  }
-  .icon {
-    display: none;
-  }
-  .row .logo {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    img {
-
-      width: 300px;
-      height: 30px;
-    }
-  }
 }
