--- a/src/Style/Card.scss
+++ b/src/Style/Card.scss
@@ -47,16 +47,20 @@
   max-width: 1260px;
 
   h1 {
-    font-family: SuecaSlab;
+    font-family: SuecaSlab-Bold;
     font-size: 24px;
-    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: -0.4px;
     margin: 0px;
     padding: 12px 0px 8px;
   }
 
   span {
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 700;
+    font-family: Arial;
+font-style: normal;
+font-weight: bold;
+font-size: 14px;
+line-height: 16px;
+color: #F2F2F2;
   }
 }
