--- a/src/Style/Article.scss
+++ b/src/Style/Article.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding : 8px;
+  padding: 8px;
   img {
     width: 80px;
     height: 80px;
@@ -24,42 +24,40 @@
 }
 
 .lead-title {
-  
   font-family: SuecaSlab-Regular;
   font-size: 20px;
   line-height: 28px;
   letter-spacing: -0.2px;
   margin: 0px;
-  padding: 8px 0px;
+  padding-bottom: 8px;
 }
 .lead {
   text-decoration: none;
-  color:#0074C4
+  color: #0074c4;
 }
 
 .title {
   text-decoration: none;
-  color:black;
+  color: black;
 }
 
 .art-img {
-  
   img {
     width: 100%;
   }
 }
 
-.nameautor{
+.nameautor {
   display: flex;
   flex-direction: row;
   justify-content: center;
   font-family: Arial;
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 24px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
 }
-.marq{
+.marq {
   font-family: Arial;
   font-style: normal;
   font-weight: 700;
@@ -72,9 +70,9 @@ line-height: 24px;
   margin: 0px;
   padding-bottom: 8px;
   font-family: Arial;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 24px;
-color: #333333
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #333333;
 }
