--- a/src/Style/Card.scss
+++ b/src/Style/Card.scss
@@ -8,17 +8,22 @@
   background-image: url("../assets/defaultImg.svg");
   background-size: cover;
   background-repeat: no-repeat;
+  
+  @media (max-width:767px) {
+    
+    margin-bottom: 64px;
+  }
 
   @media (min-width: 768px) {
     height: 768px;
     .card-bottom {
+      height: 256px;
       h1 {
         font-size: 48px;
       }
-      height: 256px;
     }
   }
-
+  
   @media (min-width: 1259px) {
     .card-bottom {
       height: 200px;
