--- a/src/Style/FocalRight.scss
+++ b/src/Style/FocalRight.scss
@@ -1,38 +1,36 @@
 .focal {
-  .modul-title {
-      padding: 0px 16px;
-      h1{
-          margin: 0px;
-          padding: 8px 0px;
-          border-bottom: 1px solid #cccccc;
+}
+.modul-title {
+  padding: 0px 16px;
+  h1 {
+    margin: 0px;
+    padding: 8px 0px;
+    border-bottom: 1px solid #cccccc;
 
-          font-family: SuecaSlab-Bold;
-          font-style: normal;
-          font-weight: normal;
-          font-size: 24px;
-          line-height: 32px;
-          letter-spacing: -0.4px;
-          color: #1c1c1f;
-      }
-      a {
-
-          text-decoration: none;
-      }
+    font-family: SuecaSlab-Bold;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.4px;
+    color: #1c1c1f;
+  }
+  a {
+    text-decoration: none;
   }
 }
 .block-art {
   width: 100%;
-  padding-top:16px;
-  @media (min-width:768px) {
-      
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-      .art-left {
-border-right: 1px solid #cccccc;;
-      }
+  padding-top: 16px;
+  @media (min-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    .art-left {
+      border-right: 1px solid #cccccc;
     }
   }
-  
-  .art-right {
-    padding-left: 10px;
-  }
+}
+
+.art-right {
+  padding-left: 10px;
+}
