--- a/src/Style/DolarLabel.scss
+++ b/src/Style/DolarLabel.scss
@@ -11,7 +11,7 @@
   padding-right: 10px;
   font-weight: 700;
   &::before {
-    content: "BNA:";
+    content: 'BNA:';
     font-weight: 400;
   }
 }
@@ -20,7 +20,7 @@
   padding-right: 10px;
   font-weight: 700;
   &::before {
-    content: "Blue:";
+    content: 'Blue:';
     font-weight: 400;
   }
 }
