--- a/src/Style/Card.scss
+++ b/src/Style/Card.scss
@@ -5,7 +5,7 @@
   height: 457px;
   width: 100%;
   color: white;
-  background-image: url('../assets/defaultImg.svg');
+  background-image: url("../assets/defaultImg.svg");
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -19,6 +19,11 @@
       height: 256px;
       h1 {
         font-size: 48px;
+        font-family: SuecaSlab-Bold;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 48px;
+        line-height: 56px;
       }
     }
   }
