--- a/src/Style/Footer.scss
+++ b/src/Style/Footer.scss
@@ -1,60 +1,114 @@
 .footer {
+  width: 100%;
   padding: 32px 0px 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+ 
+ .wrap-footer {
+   width: inherit;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
 }
-.top{
+.top {
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  @media (min-width: 1024px) {
+    border-bottom: 1px solid #cccccc;
+    width: 100%;
+    max-width: 1260px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .medium {
   display: none;
   border-bottom: 1px solid #cccccc;
-  
+
   .wrap {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
-  @media (min-width: 1260px) {
+  @media (min-width: 1024px) {
+    width: inherit;
+    max-width: 1260px;
     display: flex;
     justify-content: center;
     .block-links {
-      width: 1260px;
+      width: inherit;
       padding-left: 0px;
     }
   }
 }
 
 .bottom {
-  .wrap {
-    padding: 0px;
+  .column {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    width: 100%;
   }
-  @media (min-width: 1260px) {
-    
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+  @media (min-width: 1024px) {
+    width: 100%;
+    max-width: 1260px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
     .wrap {
       width: 1260px;
-
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-between;
     }
+    .column {
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
+.bottom-rev {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Arial;
 
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #272727;
+
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: Arial;
+
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+    color: #272727;
+  }
+}
 .links {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  @media (min-width:1260px) {
+  @media (min-width: 1024px) {
+    width: 100%;
     display: flex;
     flex-direction: row-reverse;
   }
@@ -64,12 +118,16 @@
     flex-direction: row;
     justify-content: center;
     padding: 30px 0px;
-    border-bottom: 1px solid #cccccc;
+    @media (max-width: 1023px) {
+      width: inherit;
+      border-bottom: 1px solid #cccccc;
+     
+    }
   }
 }
 
 .social {
-  padding: 32px;
+  padding: 32px 0px;
   width: 192px;
   height: 24px;
   display: flex;
@@ -87,6 +145,7 @@
   height: 35px;
   a > img {
     border-radius: 3px;
+    padding: 10px 10px 10px;
   }
 }
 
