--- a/src/Style/NavBar.scss
+++ b/src/Style/NavBar.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  
 }
 
 .img-logo {
@@ -42,6 +43,9 @@
     padding-left: 9px;
     width: 15px;
   }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .btn-suscribe {
@@ -53,6 +57,11 @@
   padding: 3px 16px;
   text-decoration: none;
   color: #0074c4;
+  &:hover {
+    background: #000;
+    border-color: #000;
+    color: #fefefe;
+  }
 }
 
 .btn-signin {
@@ -67,6 +76,12 @@
   font-weight: 700;
   border: 1px solid #0074c4;
   border-radius: 0.25rem;
+  &:hover {
+    cursor: pointer;
+    background: #008dff;
+    border-color: #008dff;
+    color: #fefefe;
+  }
 }
 
 @media (max-width: 1023px) {
