--- a/src/Style/DolarLabel.scss
+++ b/src/Style/DolarLabel.scss
@@ -1,3 +1,4 @@
+@import "../Variables/Variables.scss";
 .dolar {
   height: 40px;
   min-width: 335px;
@@ -11,7 +12,7 @@
   padding-right: 10px;
   font-weight: 700;
   &::before {
-    content: 'BNA:';
+    content: "BNA:";
     font-weight: 400;
   }
 }
@@ -20,7 +21,7 @@
   padding-right: 10px;
   font-weight: 700;
   &::before {
-    content: 'Blue:';
+    content: "Blue:";
     font-weight: 400;
   }
 }
@@ -30,5 +31,5 @@
   padding-right: 10px;
   font-size: 14px;
   font-weight: 700;
-  color: #0074c4;
+  color: $PrimaryColorBlue;
 }
