--- a/src/Style/Article.scss
+++ b/src/Style/Article.scss
@@ -1,3 +1,4 @@
+@import "../Variables/Variables.scss";
 .article {
   width: inherit;
   height: inherit;
@@ -32,12 +33,12 @@
 }
 .lead {
   text-decoration: none;
-  color: #0074c4;
+  color: $PrimaryColorBlue;
 }
 
 .title {
   text-decoration: none;
-  color: black;
+  color: $NeutralColorBlack;
 }
 
 .art-img {
@@ -62,7 +63,7 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
-  color: #272727;
+  color: $MarqueeColor;
 }
 
 .subh {
@@ -73,5 +74,5 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
-  color: #333333;
+  color: $SubhColor;
 }
