--- a/src/Style/Cabezal.scss
+++ b/src/Style/Cabezal.scss
@@ -1,17 +1,16 @@
+@import "../Variables/Variables.scss";
 .cabezal {
   display: none;
   @media (min-width: 768px) {
     width: 100%;
     display: inline-block;
     .container {
-     
       width: inherit;
       display: block;
     }
   }
   @media (min-width: 1100px) {
     .container {
-     
       width: 920px;
       height: 100px;
     }
@@ -22,7 +21,7 @@
   display: none;
   width: 728px;
   height: 90px;
-  border: 1px solid #cccccc;
+  border: $StyleSeparator;
   margin: 64px 0px 65px;
   background: repeating-linear-gradient(
     45deg,
