--- a/src/Style/Card.scss
+++ b/src/Style/Card.scss
@@ -1,10 +1,11 @@
+@import "../Variables/Variables.scss";
 .card {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   height: 457px;
   width: 100%;
-  color: white;
+  color: $NeutralColorWhite;
   background-image: url("../assets/defaultImg.svg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -70,6 +71,6 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 16px;
-    color: #f2f2f2;
+    color: $SecondaryColor;
   }
 }
