--- a/src/Style/FocalRight.scss
+++ b/src/Style/FocalRight.scss
@@ -1,9 +1,10 @@
+@import "../Variables/Variables.scss";
 .modul-title {
   padding: 0px 16px;
   h1 {
     margin: 0px;
     padding: 8px 0px;
-    border-bottom: 1px solid #cccccc;
+    border-bottom: $StyleSeparator;
 
     font-family: SuecaSlab-Bold;
     font-style: normal;
@@ -11,7 +12,7 @@
     font-size: 24px;
     line-height: 32px;
     letter-spacing: -0.4px;
-    color: #1c1c1f;
+    color: $TitleModuleColor;
   }
   a {
     text-decoration: none;
@@ -24,7 +25,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     .art-left {
-      border-right: 1px solid #cccccc;
+      border-right: $StyleSeparator;
     }
   }
 }
