--- a/src/Style/Megalateral.scss
+++ b/src/Style/Megalateral.scss
@@ -1,7 +1,8 @@
+@import "../Variables/Variables.scss";
 .cont-aside {
   width: 300px;
   height: 600px;
-  border: 1px solid #cccccc;
+  border: $StyleSeparator;
   margin: 65px 0px 64px;
   background: repeating-linear-gradient(
     45deg,
@@ -14,8 +15,8 @@
 }
 
 .m-lateral {
-  width: 300px;
-  height: 4000px;
+  width: $WidthMlateral;
+  height: $HeightMlateral;
   padding-left: 40px;
 
   @media (max-width: 1259px) {
