--- a/src/Style/SubNavBar.scss
+++ b/src/Style/SubNavBar.scss
@@ -1,3 +1,4 @@
+@import "../Variables/Variables.scss";
 .sub-navbar {
   .newsl,
   .weather,
@@ -15,7 +16,7 @@
   }
 
   @media (min-width: 1024px) {
-    background-color: #f2f2f2;
+    background-color: $SecondaryColor;
   }
 
   @media (max-width: 1023px) {
@@ -41,7 +42,7 @@
 .newsl,
 .clubn {
   text-decoration: none;
-  color: #0074c4;
+  color: $PrimaryColorBlue;
   font-size: 14px;
   font-weight: 400;
 }
